Corrections to MA 153 translation.

--- a/01_agama/madhyama/MA_153.md
+++ b/01_agama/madhyama/MA_153.md
@@ -40,7 +40,7 @@ next: MA_176.html
 9\. The Bhagavān was at his daytime practice spot at the time. He overheard the priest Bharadvāja and the heretic Sugandika having this conversation using the purified heavenly ear that goes beyond that of humans. Having heard them, he rose from his seat of repose late in the afternoon and went to the priest Bhāradvāja’s most quiet abode. He spread out his sitting mat on his straw seat there and sat cross-legged.
 {:#p9}
 
-10\. Bharadvāja had seen the Bhagavān among the trees in the distance. He was sitting upright and looked beautiful like the moon among the stars. His brilliant splendor shined like a mountain of gold. Replete with the signs and excellencies, his majesty was awe-inspiring. His face was peaceful and settled. Nothing could obstruct him. He had acomplished the training, and his stilled mind was quiet. Having seen this, Bharadvāja approached the Buddha, exchanged polite greetings with him, and withdrew to sit at one side.
+10\. Bharadvāja had seen the Bhagavān among the trees in the distance. He was sitting upright and looked beautiful like the moon among the stars. His brilliant splendor shined like a mountain of gold. Replete with the signs and excellencies, his majesty was awe-inspiring. His face was peaceful and settled. Nothing could obstruct him. He had accomplished the training, and his stilled mind was quiet. Having seen this, Bharadvāja approached the Buddha, exchanged polite greetings with him, and withdrew to sit at one side.
 {:#p10}
 
 11\. The Bhagavān asked him, “Bharadvāja, did you have a conversation with the heretic Sugandika about this straw seat?”
@@ -227,7 +227,7 @@ That stands in the safety of the immortal.’"
 55\. There was a crowd of people listening to them. After they heard this verse, that group of heretics turned it over and repeated it to each other, but they couldn’t understand what it meant. Having heard it, they wanted to pursue that teaching, but they were all fools and returned to deceiving each other.
 {:#p55}
 
-56\. Their own present bodies were made of the four basic elements, had been born from parents, raised by food, always being sheltered, rubbed, and bathed. They were forced to endure its deteriorating, eroding, and dispersing nature, but they saw a soul and clung to that soul. Conditioned by clinging, then there was existence. Conditioned by existence, there eas birth. Conditioned by birth, there was old age and death. Conditioned by old age and death, there was grief, lamentation, misery, and trouble. In this way, the whole mass of suffering arose.
+56\. Their own present bodies were made of the four basic elements, had been born from parents, raised by food, always being sheltered, rubbed, and bathed. They were forced to endure its deteriorating, eroding, and dispersing nature, but they saw a soul and clung to that soul. Conditioned by clinging, then there was existence. Conditioned by existence, there was birth. Conditioned by birth, there was old age and death. Conditioned by old age and death, there was grief, lamentation, misery, and trouble. In this way, the whole mass of suffering arose.
 {:#p56}
 
 #### Clarifying the Dharma Eye
@@ -243,7 +243,7 @@ He answered, “No, Gautama.”
 59\. “So it is, Sugandika. If your noble wisdom eye isn’t clear yet, you’ll never be able to understand my teaching about health and Nirvāṇa, and that would be troublesome to me.
 {:#p59}
 
-60\. “Sugandika, I’ll teach you about something that’s like a marvelous medicine, which will cause your noble wisdom eye to become clear. Sugandika, if your noble wisdom eye becomes clear, you’ll be able to understand for yourself: ‘This is good heath. This is Nirvāṇa.’ Sugandika, [you’d be] like a man born blind who has relatives who care about him. Seeking profit and gain for him and seeking his safety and happiness, they find an eye doctor, and the doctor gives him a variety of treatments. Some are purgatives, some are laxitives. Some are nasal irrigations, some are enemas. Sometimes, his veins are peirced; sometimes, they make his tears flow.
+60\. “Sugandika, I’ll teach you about something that’s like a marvelous medicine, which will cause your noble wisdom eye to become clear. Sugandika, if your noble wisdom eye becomes clear, you’ll be able to understand for yourself: ‘This is good heath. This is Nirvāṇa.’ Sugandika, [you’d be] like a man born blind who has relatives who care about him. Seeking profit and gain for him and seeking his safety and happiness, they find an eye doctor, and the doctor gives him a variety of treatments. Some are purgatives, some are laxatives. Some are nasal irrigations, some are enemas. Sometimes, his veins are pierced; sometimes, they make his tears flow.
 {:#p60}
 
 61\. “Sugandika, this being the case, both his eyes become clear. Sugandika, if both his eyes become clear, then he can see for himself, ‘This is the color blue … yellow … red … the color white.’ He can also see, ‘Those clothes are filthy and impure.’ Then he thinks, ‘That deceiver was not my friend who fooled me with these filthy clothes for so long.’ Then he has a thought of hatred for that deceiver. Sugandika, perhaps the person then kills that deceiver.
@@ -293,13 +293,14 @@ He answered, “No, Gautama.”
 *Bhāradvāja*. C. 婆羅婆 (MC. bua-la-bua > \*Bharva? > G. Bharadvaya). As is often the case, C. translit. drops the final syllable, and *Bharvaya* is attested in a G. [fragment](https://gandhari.org/dictionary/bharadvaya). In MN 75, this is a clan name rather than a personal name.\\
 *most quiet abode.* C. 第一靜室. Unsure of the Indic equivalent, I’ve rendered  this expression freely. The lit. meaning is “the best quiet abode.” In Pali, the Buddha was staying in a hut for conducting Brahmanical fire rituals (P. *agyāgāra*). [\[back\]](#ref1)
 2. {:#n2} *Kalmāṣadamya.* C. 釰摩瑟曇 (MC. kɪʌm-mua-ṣɛt-dəm > G. \*Kaṃmaṣadam-?), P. Kammāsadamma, S. Kalmāṣadamya. I’ve found no attestation in G. for this placename, but the C. is a reasonable approx. of what it might have sounded like. [\[back\]](#ref2)
-3. {:#n3} *heretic.* C. 異學, P. *paribbājaka*. The C. translation means “heterodox,” which matches the meaning of S. *tīrthika* better than S. *parivrājaka*, as it was used to mean an adherent of another religious tradition. But these terms were often treated as close synonyms, usu. referring to both non-Buddhist mendicants and philsophers as a group.\\
+3. {:#n3} *heretic.* C. 異學, P. *paribbājaka*. The C. translation means “heterodox,” which matches the meaning of S. *tīrthika* better than S. *parivrājaka*, as it was used to mean an adherent of another religious tradition. But these terms were often treated as close synonyms, usu. referring to both non-Buddhist mendicants and philosophers as a group.\\
 *Sugandika*. C. 鬚閑提 (MC. sui-ɦʌn-dei > G. \*Suhandi-), P. Magandiya, S. Makandika or Magandika. The C. was probably equivalent to G. \*Sukandika (but the first *-k-* has been weakened to an *-h-*), which would the equiv. of S. \*Sugandika. A slightly different name, Sugandhi, is attested in S. sources (Edgerton, 597). [\[back\]](#ref3)
 4. {:#n4} *destroyed the ground*. C. 壞敗地, 敗壞地, P. *bhūnahuno*, *bhūnahano*, or *bhūnahanassa*, S. *\*bhūmihan*. The meaning of the Pali parallel is obscure and doesn’t appear to have a clear derivation. Pali commentaries claim that it’s equivalent to *bhuti-hanaka*, “destroyer of beings.” Here, the Chinese suggests instead S. *bhūmihan*, “destroyer of the ground.” I suspect the Pali may have been corrupted by the loss of a syllable (perhaps *-mi-* or *-ti-*), and then attempts at correcting it created nonsensical words. For all this uncertainty, the word appears to simply mean the Buddha was sprawling about and making a mess of his spot, for which he was being judged as undisciplined. This is supported somewhat by the Buddha’s initial insistence that he is well disciplined. [\[back\]](#ref4)
 5. {:#n5} In MN 75, the Buddha uses himself as an example instead of a theoretical third party. As we shall see, the general arguments made and metaphors used are the same here as they are in MN 75, but the two texts are organized differently and expand on different points independently of each other.\\
 *live with an inner calm*. C. 内息心遊行, P. *ajjhattaṁ vūpasantacitto viharāmi*. The verb 遊行, which often translates P. *viharati*, lit. means “to wander.” The intended meaning may be to go about one’s life in general, but has been translated specifically to the ascetic lifestyle of wandering from place to place. [\[back\]](#ref5)
-6. {:#n6} *don’t praise that*. C. 不稱彼, P. *tesaṁ na pihemi*. C. 稱 means “to praise, admire,” whereas P. *piheti* means “to covet, envy.” In C., it’s not clear whether the pronoun 彼 refers to the person or to their practice of enjoying sensual desires. In P., the distinction is made grammatically. The natural reading in C. would be that the person is both not admired and not delightful, but I’ve followed the P. assuming the original here was the same grammatically. [\[back\]](#ref6)
-7. {:#n7} *five merits of desire*. C. 五欲功徳, P. *pañca kāmaguṇa*. This term refers to the five sensory objects of desire, apparently looking forward to their heavenly counterparts. P/S. *guṇa* is a word with a number of possible meanings, the most common in Buddhist contexts being “merit, quality, feature, thread, subdivision.” In this case, it’s typically interpreted as “thread” or “part” in Theravāda Buddhism, but the C. translation (功徳) clearly means “merit” or “virtue.” This is probably a reference to these desires being rewards of good *karma* when one is born in the human or heavenly worlds, and these two outcomes will be addressed shortly by the Buddha. [\[back\]](#ref7)
+6. {:#n6} *pursuing [forms]*. The C. here is 行, which is parallel to P. *paṭisevante* (from the v. *paṭisevati*), which means “follows, pursues, practices, indulges in.” “Pursue” is not a typical reading for 行 (which usu. means “walk, do, practice, act”), but 行 seems an imprecise translation in this passage.\\
+*don’t praise that*. C. 不稱彼, P. *tesaṁ na pihemi*. C. 稱 means “to praise, admire,” whereas P. *piheti* means “to covet, envy.” In C., it’s not clear whether the pronoun 彼 refers to the person or to their practice of enjoying sensual desires. In P., the distinction is made grammatically. The natural reading in C. would be that the person is both not admired and not delightful, but I’ve followed the P. assuming the original here was the same grammatically. [\[back\]](#ref6)
+7. {:#n7} *five merits of desire*. C. 五欲功徳, P. *pañca kāmaguṇa*. This term refers to the five sensory objects of desire, apparently looking forward to their heavenly counterparts. P/S. *guṇa* is a word with a number of possible meanings, the most common in Buddhist contexts being “merit, quality, feature, thread, subdivision.” In this case, it’s typically interpreted as “thread” or “part” in Theravāda Buddhism, but the C. translation (功徳) clearly means “merit” or “virtue.” This might be a reference to these desires being rewards of good *karma* when one is born in the human or heavenly worlds, and these two outcomes will be addressed shortly by the Buddha. [\[back\]](#ref7)
 8. {:#n8} *limbs to be uninjured.* C. 不壞諸根, S. *anupahatendriya*. The C. appears to be a lit. translation of an Indic term for being physically disabled due to injury. The term typically translated as "faculties" (C. 諸根, S. *indriya*) in Buddhist texts usually refers to the senses, but does include the rest of the physical body that give a person abilities, like the limbs. So, I’ve translated it as "limbs" in this context.\\
 Interestingly, though, the same term occurs in MN 75 in the later context of being mentally unsound in the discussion of having mistaken perceptions. There, it refers to mental faculties rather than physical ones. I wonder if a shared ancestor to MN 75 and MĀ 153 had used the term in both ways to link up the concrete metaphor of physical illness (leprosy) for a mental illness (delusion). [\[back\]](#ref8)
 9. {:#n9} At this point, a Chinese copyist apparently lost his place and duplicated passages twice. The first duplication puts part of the Buddha’s reply into Sugandika’s mouth here. The second duplication has the Buddha repeating himself verbatim in the next paragraph. I’ve removed both duplications from my translation.
@@ -308,7 +309,7 @@ Interestingly, though, the same term occurs in MN 75 in the later context of bei
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 15 January 2023
+Last Revised: 17 January 2023
 {: .revised}
 
 ---
