--- a/01_agama/ekottarika/02/EA_02_09.md
+++ b/01_agama/ekottarika/02/EA_02_09.md
@@ -9,28 +9,31 @@ next: EA_02_10.html
 
 # [The Numerical Discourses](../index.html)
 ## Chapter 2: Ten Recollections
-### 9. Body
+### 9. The Body
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{: #p1}
+{:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “You should cultivate one thing and widely disseminate one thing. It readily achieves penetrating knowledge, removes myriad confused conceptions, wins the fruits of the ascetic, and brings about nirvāṇa. What is that one thing? It’s recollection of the body. You should cultivate and widely disseminate this. It readily achieves penetrating knowledge, removes myriad confused conceptions, wins the fruits of the ascetic, and brings about nirvāṇa.
-{: #p2}
+2\. It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. Then, they will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves. What’s that one thing? It’s called recollecting the body.[\[2\]](#n2){:#ref2} One should cultivate and widely disseminate it. Then, they will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves.
+{:#p2}
 
-3\. “Monks, you should cultivate this one thing and widely disseminated this one thing. Thus, monks, should you train.”
-{: #p3}
+3\. “Therefore, monks, you should cultivate this one thing and widely disseminate this one thing. Thus, monks, should you train.”
+{:#p3}
 
-4\. The monks who heard what the Buddha taught rejoiced and approved.
-{: #p4}
+4\. When the monks heard what the Buddha taught, they rejoiced and approved.
+{:#p4}
+
+---
 
 ### Notes
-1. {:#n1} Parallels include [AN 1.304](https://suttacentral.net/an1.296-305/en/sujato){: target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This sūtra is parallel with [AN 1.304](https://suttacentral.net/an1.296-305/en/sujato){: target="_blank"}. [\[back\]](#ref1)
+2. {:#n2} *the body*. C. 身非常. The Taisho edition here reads “impermanence of the body,” but this appears to be a corruption when compared to [EĀ 3.9](../03/EA_03_09.html){: target="_blank"} or other instances of the ten recollections (cf. EĀ 40.5, 46.5, 46.8, and 47.1), which make no mention of impermanence. I’ve therefore omitted it from my translation. [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 29 January 2023
 {: .revised}
 
 ---
