--- a/01_agama/ekottarika/02/EA_02_10.md
+++ b/01_agama/ekottarika/02/EA_02_10.md
@@ -12,31 +12,33 @@ next: ../12/EA_12_01.html
 ### 10. Death
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{: #p1}
+{:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “You should cultivate one thing and widely disseminate one thing. It readily achieves penetrating knowledge, removes myriad confused conceptions, wins the fruits of the ascetic, and brings about nirvāṇa. What is that one thing? It’s recollection of death. You should cultivate and widely disseminate this. It readily achieves penetrating knowledge, removes myriad confused conceptions, wins the fruits of the ascetic, and brings about nirvāṇa.
-{: #p2}
+2\. It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. Then, they will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves. What’s that one thing? It’s called recollecting death. One should cultivate and widely disseminate it. Then, they will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves.
+{:#p2}
 
-3\. “Monks, you should cultivate this one thing and widely disseminated this one thing. Thus, monks, should you train.”
-{: #p3}
+3\. “Therefore, monks, you should cultivate this one thing and widely disseminate this one thing. Thus, monks, should you train.”
+{:#p3}
 
-4\. The monks who heard what the Buddha taught rejoiced and approved.
-{: #p4}
+4\. When the monks heard what the Buddha taught, they rejoiced and approved.
+{:#p4}
 
 ###### Summary Verse
-* {:.verse}Recollection of [1] the Buddha, [2] teaching, and [3] noble assembly;\\
-Recollection of [4] precepts, [5] generosity, and [6] gods;\\
-Recollection of [7] calmness and [8] breathing;\\
-And recollection of [9] body and [10] death are last.
+* {:.verse}Recollection of the Buddha, Dharma, and noble Saṅgha;\\
+Recollection of precepts, generosity, and gods;\\
+Recollection of peace and breathing;\\
+And recollection of the body and death are last.
+
+---
 
 ### Notes
-1. {:#n1} Parallels include [AN 1.303](https://suttacentral.net/an1.296-305/en/sujato){: target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This sūtra is parallel with [AN 1.303](https://suttacentral.net/an1.296-305/en/sujato){: target="_blank"}. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 29 January 2023
 {: .revised}
 
 ---
