Added EA 3.1-2, made a couple corrects to EA 2, converted EA index to html, and added Book titles to the index.

--- a/01_agama/ekottarika/02/EA_02_01.md
+++ b/01_agama/ekottarika/02/EA_02_01.md
@@ -3,7 +3,7 @@ layout: default
 title: 'The Numerical Discourses | 2. Ten Recollections | 1. The Buddha'
 type: kramdown
 base: ../../../
-previous: ../index.html
+previous: ../01/EA_01_01.html
 next: EA_02_02.html
 ---
 
