--- a/01_agama/ekottarika/02/EA_02_02.md
+++ b/01_agama/ekottarika/02/EA_02_02.md
@@ -9,7 +9,7 @@ next: EA_02_03.html
 
 # [The Numerical Discourses](../index.html)
 ## Chapter 2: Ten Recollections
-### 2. The Teaching
+### 2. The Dharma
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
