--- a/01_agama/ekottarika/03/EA_03_02.md
+++ b/01_agama/ekottarika/03/EA_03_02.md
@@ -4,7 +4,7 @@ title: 'The Numerical Discourses | 3. Broader Explanations | 2. The Dharma'
 type: kramdown
 base: ../../../
 previous: EA_03_01.html
-next: ../12/EA_12_01.html
+next: EA_03_03.html
 ---
 
 # [The Numerical Discourses](../index.html)
