--- a/01_agama/ekottarika/03/EA_03_04.md
+++ b/01_agama/ekottarika/03/EA_03_04.md
@@ -4,7 +4,7 @@ title: 'The Numerical Discourses | 3. Broader Explanations |  4. The Precepts'
 type: kramdown
 base: ../../../
 previous: EA_03_03.html
-next: ../12/EA_12_01.html
+next: EA_03_05.html
 ---
 
 # [The Numerical Discourses](../index.html)
